去除登录校验模拟接口进入以及顶级菜单不显示

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xcloud-devops-view",
   "version": "v2.0.0",
-  "description": "XCloud DevOps View",
+  "description": "DoPasS View",
   "author": "<wanglsir@gmail.com>",
   "private": true,
   "scripts": {
